--- a/css/proyects.css
+++ b/css/proyects.css
@@ -17,6 +17,10 @@
     text-decoration: none;
 }
 
+.carrusel-containner{
+    display: flex;
+}
+
 .proyects-buttons .category-item{
     margin: 2rem;
     color: var(--text-color);
@@ -49,7 +53,8 @@
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
-    transition: all 1s ;
+    transition: all 1s;
+    width: 100%;
 }
 
 .proyects-box img{
@@ -82,6 +87,7 @@
 .proyects-box:hover .proyects-layer{
     transform: translateY(0);
 }
+
 
 .proyects-layer h4{
     font-size: 3rem;
