--- a/css/contact.css
+++ b/css/contact.css
@@ -29,3 +29,18 @@ background:linear-gradient(var(--second-bg-color), var(--bg-color));
     border-radius: .8rem;
     margin: .7rem 0;
 }
+
+.contact form .input-box input{
+    width: 49%;
+}
+
+.contact form textarea{
+    resize: none;
+}
+
+.contact form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+    
+}
+
