--- a/css/home.css
+++ b/css/home.css
@@ -75,3 +75,30 @@ span {
     color: var(--main-color);
     background: var(--second-bg-color);
 }
+
+@media (max-width: 768px){
+    .home{
+        text-align: center;
+        flex-direction: column;
+    }
+
+    .home-content h3{
+        font-size: 2.6rem;
+    }
+
+    .home-content h1{
+        font-size: 5rem;
+    }
+
+    .home-content p {
+        width: 50%; /* Limita el ancho del párrafo */
+        margin: 0 auto; /* Centra horizontalmente */
+        text-align: center;
+    }
+
+    .home-img{
+        width: 40vw;
+        margin-top: 4rem;
+
+    }
+}
