--- a/css/home.css
+++ b/css/home.css
@@ -80,6 +80,7 @@ span {
 
 @media (max-width: 768px){
     .home{
+        padding-top: 15rem;
         text-align: center;
         flex-direction: column;
         display: block;
