--- a/css/proyects.css
+++ b/css/proyects.css
@@ -174,7 +174,7 @@
 
 @media (max-width: 768px){
     .proyects-container{
-        grid-template-columns: repeat(2 , 1fr);
+        grid-template-columns: 1fr;
     }
 
     .proyects h2{
