Organizacion de espacios 768px

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,11 @@ section {
 }
 
 @media (max-width: 768px){
+   
+ section {
+    min-height: 65vh;
+ }
+
     #menu-icon{
         display: block;
     }
