--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -1,5 +1,4 @@
 /*Diseños de About me*/
-
 .about {
     display: flex;
     justify-content: center;
@@ -32,7 +31,7 @@
     margin: 2rem 0 3rem;
 }
 
-/*Breakpoint */
+/*********Beackpoint 768PX*********/
 @media (max-width: 768px){
     .about{
          flex-direction: column-reverse;   
@@ -40,17 +39,23 @@
 
     .about-content h2 {
         text-align: center;
+        font-size: 6rem;
     }
+
     .heading{
         width: 50%; 
         margin: 0 auto; 
     }
 
     .about-content{
-        width: 50%; 
+        width: 80%; 
         margin: 0 auto; 
         text-align: center;
         display: block;
+    }
+
+    .about-content p {
+        font-size: 2.25rem;
     }
 
     .about-img{
