--- a/css/contact.css
+++ b/css/contact.css
@@ -44,11 +44,28 @@ padding-top: 15rem;
     cursor: pointer;
 }
 
-
-/*Breakpoint*/
+/*********Beackpoint 768PX*********/
 @media (max-width: 768px){
  .contact{
     padding-top: 2rem;
  }
 
+ .contact h2 {
+    font-size: 6rem;
+ }
+
+.contact form {
+    max-width: 80rem;
+}
+ .contact form .input-box input {
+    font-size: 2.25rem;
+}
+
+.contact form textarea {
+    font-size: 2.25rem;
+}
+
+.btn{
+    font-size: 2.25rem;
+}
 }
