--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,25 @@
     background: var( --bg-color);
 }
 
+.btnLeguaje{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    position: absolute;
+    left: 78rem;
+    font-size: 2rem; 
+}
+
+.btnLeguaje img{
+    width: 5rem;
+    height: 5rem; 
+}
+
+#spanL{
+    color: #929191;
+}
+
 .home-img img {
     width: 35vw;
     border-radius: 70%;
@@ -77,7 +96,15 @@ span {
     background: var(--second-bg-color);
 }
 
-/*********Beackpoint 768PX*********/
+/*********Breackpoint 1440PX*********/
+
+@media (max-width: 1203px){
+    .btnLeguaje{
+        left: 66rem;
+    }
+}
+
+/*********Breackpoint 768PX*********/
 
 @media (max-width: 768px){
     .home{
@@ -87,6 +114,20 @@ span {
         display: block;
     }
 
+    .btnLeguaje{
+        left: 100rem;
+        font-size: 2.5rem; 
+    }
+    
+    .btnLeguaje img{
+        width: 6rem;
+        height: 6rem; 
+    }
+    
+    #spanL{
+        color: #929191;
+    }
+    
     .home-content h3{
         font-size: 4rem;
     }
@@ -114,5 +155,22 @@ span {
 
     .home-img{
         margin-top: 4rem;
+    }
+}
+
+/*********Breackpoint 425PX --- 320px*********/
+
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .btnLeguaje{
+        left: 41rem;
+    }
+    
+    .btnLeguaje img{
+        width: 5.25rem;
+        height: 5.25rem; 
+    }
+    
+    #spanL{
+        color: #929191;
     }
 }
