--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     background: transparent;
-    margin-left: auto; /* Mueve el botón al extremo izquierdo */
+    margin-left: auto;
     font-size: 2rem; 
 }
 
